--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@syncfusion/ej2-react-maps": "^31.2.2",
     "@syncfusion/ej2-react-navigations": "^31.2.5",
     "@syncfusion/ej2-react-splitbuttons": "^31.2.2",
+    "dayjs": "^1.11.19",
     "isbot": "^5.1.31",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
